<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Image Searcher</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="settings_name">Settings</string>
    <string name="search_btn_label">Search</string>
    <string name="search_hint">Enter search term</string>
    <string name="title_activity_image_display">ImageDisplayActivity</string>
    <string name="title_activity_search_settings">SearchSettingsActivity</string>
    <string name="image_size">Image Size</string>
    <string name="color_filter">Color Filter</string>
    
    <string-array name="size_array">
        <item></item>
        <item>icon</item>
        <item>medium</item>
        <item>xxlarge</item>
    </string-array>

    <string-array name="type_array">
        <item></item>
        <item>face</item>
        <item>photo</item>
        <item>clipart</item> 
        <item>lineart</item>
    </string-array>
    
    <string-array name="color_array">
        <item></item>
        <item>black</item>
        <item>blue</item>
        <item>brown</item>
        <item>green</item>
        <item>orange</item>
        <item>purple</item>
        <item>red</item>           
    </string-array>
    
    
    <string name="search_options">Advanced search options</string>
    <string name="image_type">Image Type</string>
    <string name="site_filter">Site Filter</string>
    <string name="save">Save</string>
    <string name="site_filter_hint">wikimedia.org</string>
    
</resources>
